--- a/Nalaasha/html/css/template.css
+++ b/Nalaasha/html/css/template.css
@@ -1,4 +1,3 @@
-
 body{
 font-family: 'Century Gothic', sans-serif!important;
                                                 
@@ -46,18 +45,12 @@ box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.17);
 border-radius: 4px;
 color: #0F3259;
 }
-.media i{
-	color: #0394CF;
-}
 .white-box:hover{
 	background: #0394CF;
 box-shadow: 2px 1px 6px rgba(0, 0, 0, 0.17);
 border-radius: 4px;
 color: #fff!important;
 }
-.white-box:hover .media i {
-            color: #FFE24B;
-        }
 
 .container1 {
     max-width: 1335px!important;
@@ -275,4 +268,41 @@ footer ul li{
 	padding-left: 15px;
 	color: #fff;
 	font-size: 25px;
+}
+#accordion-card {
+    background-color: #fff;
+    border-radius: 15px;
+    margin: 15px 0;
+}
+.card-header, .btn-uncolored {
+    background: none !important;
+}
+.accordion-secondary-text {
+    color: rgb(186, 178, 178);
+}
+.accordion-title button {
+    color: #4285f4;
+    font-weight: bold;
+}
+.user-icon {
+    background-color: #4285f4;
+    color: #fff;
+    padding: 1px 5px;
+    border-radius: 50%;
+}
+.mark-icon {
+    margin: 0px 20px;
+}
+.mark-icon svg {
+    color: #4285f4;
+}
+.mark-icon span {
+    display: inline-block;
+    margin: 5px 0px 5px 8px;
+}
+#collapseThree {
+    margin-bottom: 10px;
+}
+.accordion-item-content {
+    margin-bottom: 10px;
 }
